--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,18 @@
 [package]
 authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
-edition = "2018"
+edition = "2021"
 name = "manning-lp-async-rust-project-2-m1-solution"
 version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-std = {version = "1.12", features = ["unstable", "attributes", "tokio1"]}
+#async-std = {version = "1.12", features = ["unstable", "attributes", "tokio1"]}
+tokio = { version="1.26.0", features= ["macros", "rt-multi-thread"]}
+tokio-stream = "0.1.1"
 async-trait = "0.1"
 chrono = {version = "0.4.22", features = ["serde"]}
-clap = {version = "3.1.8", features = ["derive"]}
-xactor = "0.7"
+clap = {version = "4.1.11", features = ["derive"]}
+xactor = { version = "0.7", features = ["runtime-tokio"], default-features = false }
+#xactor = "0.7"
 yahoo_finance_api = "1.1"
