--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,11 @@ version = "0.1.0"
 tokio = { version="1.26.0", features= ["macros", "rt-multi-thread"]}
 tokio-stream = "0.1.1"
 async-trait = "0.1"
+futures-util = "0.3"
 chrono = {version = "0.4.22", features = ["serde"]}
 clap = {version = "4.1.11", features = ["derive"]}
 xactor = { version = "0.7", features = ["runtime-tokio"], default-features = false }
 #xactor = "0.7"
 yahoo_finance_api = "1.1"
+async-stream = "0.3.4"
+time = { version = "0.3.20", features = ["serde"] }
